--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4",
     "@hookform/resolvers": "^3.3.2",
-    "react-hook-form": "^7.48.2"
+    "react-hook-form": "^7.48.2",
+    "airtable": "^0.12.2"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
