--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "zod": "^3.22.4",
     "@hookform/resolvers": "^3.3.2",
     "react-hook-form": "^7.48.2",
-    "airtable": "^0.12.2"
+    "airtable": "^0.12.2",
+    "framer-motion": "^10.16.16"
   },
   "devDependencies": {
     "typescript": "^5.3.3",
